# databricks-iris

./: README.md  pyproject.toml
conf/base/: logging.yml
docs/source/: conf.py  index.rst
notebooks/: databricks-iris.py
src/: setup.py
src/databricks-iris/: __init__.py  __main__.py  settings.py
src/tests/: test_run.py
