[tool.kedro]
package_name = "databricks_iris"
project_name = "databricks_iris"
kedro_init_version = "0.18.7"
project_version = "0.18.7"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/databricks_iris -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "databricks_iris"
version = "0.1.0"
description = ""
authors = ["PLACEHOLDER"]
readme = "README.md"
packages = [
    { include = "databricks_iris", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
kedro = "0.18.7"
kedro-datasets = "1.2.0"
pyspark = "3.2.0"
delta-spark = "1.2.1"

[tool.poetry.group.dev.dependencies]
kedro-viz = "^5.3.0"
pre-commit = "^2.20.0"
jupyter = "^1.0.0"
ipython = ">7.31.1, <8.0"
jupyterlab = "^3.5.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.lint.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^6.0.0"
pylint = "^2.15.8"
mypy = "^0.991"

[tool.poetry.scripts]
isort = "isort.main:main"
black = "black:patched_main"
flake8 = "flake8.main.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
